# hw8-web

./: pyproject.toml
MongoDB/: config.ini  models.py  search.py  seeds.py
RabbitMQ/: config.ini  connect.py  consumer.py  models.py  producer.py
