[tool.poetry]
name = "hw8-web"
version = "0.1.0"
description = ""
authors = ["anton-akulenko <anton.htl@gmail.com>"]
readme = "README.md"
packages = [{include = "hw8_web"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
